# league-of-legends-match-intelligence-system

./: README.md  apis.txt  pyproject.toml
data/cache/matches/: NA1_5441940357.json  NA1_5441964751.json  NA1_5441981348.json  NA1_5442024222.json  NA1_5442139046.json  NA1_5442226236.json  NA1_5442855892.json  NA1_5442877400.json  NA1_5442907712.json  NA1_5442938752.json
data/cache/timelines/: NA1_5441940357.json  NA1_5441964751.json  NA1_5441981348.json  NA1_5442024222.json  NA1_5442139046.json  NA1_5442226236.json  NA1_5442855892.json  NA1_5442877400.json  NA1_5442907712.json  NA1_5442938752.json
data/derived/: all_window_features_30s.csv  detected_fights.csv  fight_summaries.csv  query_results.csv
data/derived/NA1_5441940357/: kills.csv  objectives.csv  window_features_30s.csv
data/derived/NA1_5441964751/: kills.csv  objectives.csv  window_features_30s.csv
data/derived/NA1_5441981348/: kills.csv  objectives.csv  window_features_30s.csv
data/derived/NA1_5442024222/: kills.csv  objectives.csv  window_features_30s.csv
data/derived/NA1_5442139046/: kills.csv  objectives.csv  window_features_30s.csv
data/derived/NA1_5442226236/: kills.csv  objectives.csv  window_features_30s.csv
data/derived/NA1_5442855892/: kills.csv  objectives.csv  window_features_30s.csv
data/derived/NA1_5442877400/: kills.csv  objectives.csv  window_features_30s.csv
src/: cache.py  main.py  riot_client.py  timeline_parser.py
src/services/: data_fetcher.py  feature_extractor.py  fight_query.py  fight_summarizer.py  nl_query.py  teamfight_detector.py
(+6 files in other folders)
