[project]
name = "league-of-legends-match-intelligence-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pynvim>=0.6.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "numpy>=2.2.6",
]
